--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,14 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.chanpion.neo4j</groupId>
             <artifactId>neo4j-spring-boot-starter</artifactId>
             <version>1.0.0</version>
